# barn_challenge_lu

./: CMakeLists.txt  README.md  package.xml  stats.txt
LKHs/: LKH  LKHlog.txt  LKHparams.txt  LKHprob.txt  LKHsol.txt
data/: ParamsCar.txt  ParamsDromosForCar.txt  ParamsForJackalGlobal.txt  ParamsGeneral.txt  ParamsGenerateInstances.txt  ParamsGraphics2D.txt  ParamsJuveForCar.txt  ParamsPRM_2D.txt  ParamsRRTForCar.txt  ParamsRobot.txt  ParamsSceneForCar.txt  ParamsSceneForRobot.txt  ParamsSequentialForCar.txt
figures/: t.txt
gdata/cmaps/: CreateColormaps.m  autumn.cmap  bone.cmap  cool.cmap  copper.cmap  flag.cmap  gray.cmap  hot.cmap  hsv.cmap  jet.cmap  lines.cmap  ocean.cmap  pink.cmap  prism.cmap  rainbow.cmap  spring.cmap  summer.cmap  white.cmap  winter.cmap
gdata/models/: Golf_car.mtl
gdata/textures/: brick.ppm  chassis.mesh.xml  sand.ppm  terrain1.ppm  terrain2.ppm  terrain5.ppm  wheel.mesh.xml
launch/: gazebo_launch.launch  gazebo_launch_ddp.launch  gazebo_launch_test.launch  move_base_DWA.launch  move_base_Lu.launch  rviz_view.launch
params/: costmap_common_params.yaml
params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
rviz/: a.rviz
scripts/: a.py  build_ddp.sh  build_test.sh  dataset.txt  get_laser_data.py  load_costmap.py  out.txt  out_ddp_v=1.5_ddp  out_dwa_v=1  out_dwa_v=1.5_ddp  out_dwa_v=2  out_lu_v=1.5  out_lu_v=1.5_ddp  out_lu_v=2  run.py  run_ddp.py  run_test.py  sest.sh  test.sh  test.txt
scripts/results/: out.txt  out_ddp_v=1.5_bisai  out_ddp_v=1.5_ddp  out_ddp_v=2_ddp  out_dwa_v=1.5  out_dwa_v=1_ddp  out_dwa_v=2_ddp  out_lu_v=1  out_lu_v=1_ddp  out_lu_v=2_ddp
src/: collision_publisher.cpp
src/Components/: Allocator.cpp  Allocator.hpp  Component.hpp  Constants.hpp  Decomposition.cpp  Decomposition.hpp  DecompositionEdge.cpp  DecompositionEdge.hpp  DecompositionGeometric.cpp  DecompositionGeometric.hpp  DecompositionGrid.cpp  DecompositionGrid.hpp  DecompositionPRM.cpp  DecompositionPRM.hpp  DecompositionTriangles.cpp  DecompositionTriangles.hpp  Follow.cpp  Follow.hpp  Group.cpp  Group.hpp  GroupKey.hpp  GroupKeyId.hpp  GroupKeyMulti.cpp  GroupKeyMulti.hpp  GroupKeyRegion.hpp  GroupKeyTour.hpp  GroupKeyUnreachedGoals.cpp  GroupKeyUnreachedGoals.hpp  GroupSelector.hpp  GroupSelectorMaxWeight.cpp  GroupSelectorMaxWeight.hpp  GroupSelectorProbabilityUniform.hpp  GroupSelectorProbabilityWeights.cpp  GroupSelectorProbabilityWeights.hpp  Groups.cpp  Groups.hpp  Problem.cpp  Problem.hpp  Region.hpp  Region2D.hpp  (+25 more)
src/Planners/: Constants.hpp  DDP.cpp  DDP.hpp  DDPDWAPlanner.cpp  DDPDWAPlanner.hpp  DDPMPPIPlanner.cpp  DDPMPPIPlanner.hpp  DWAPlanner.cpp  DWAPlanner.hpp  Juve.cpp  Juve.hpp  MP.hpp  MPPIPlanner.cpp  MPPIPlanner.hpp  MPTree.cpp  MPTree.hpp  MPTreeVertex.hpp  Parameters.cpp  RRT.cpp  RRT.hpp  Sequential.cpp  Sequential.hpp  Solution.hpp  Utils.cpp
src/Programs/: Constants.hpp  GManagerDecomposition.cpp  GManagerDecomposition.hpp  GManagerGoals.cpp  GManagerGoals.hpp  GManagerMP.cpp  GManagerMP.hpp  GManagerSimulator.cpp  GManagerSimulator.hpp  GRunDWA.cpp  GRunMP.cpp  RunDWA.cpp  RunLuPlanner.cpp  RunMP.cpp  Runner.cpp  Setup.cpp  Setup.hpp
src/Robot/: Jackal.cpp  Jackal.hpp  utility.cpp  utility.hpp
src/SceneAndSimulation/: Car.cpp  Car.hpp  Robot.cpp  Robot.hpp  Scene.cpp  Scene.hpp  Scene2D.cpp  Scene2D.hpp  Scene3D.cpp  Scene3D.hpp  Simulator.cpp  Simulator.hpp  SimulatorBlimp.cpp  SimulatorBlimp.hpp  SimulatorCarTrailers.cpp  SimulatorCarTrailers.hpp  SimulatorJackal.cpp  SimulatorJackal.hpp  SimulatorMotionEqs.cpp  SimulatorMotionEqs.hpp  (+4 more)
(+88 files in other folders)
